2009-06-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDevices): Removed unused
	variable.

2009-04-14  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (cups_ppdSetConformance): New method (trac #3).

2009-03-20  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDevices): New optional arguments
	limit, exclude_schemes and include_schemes.

2009-03-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): New optional arguments
	limit, exclude_schemes, include_schemes, ppd_device_id, ppd_make,
	ppd_make_and_model, ppd_model_number, ppd_product, ppd_psversion,
	ppd_type and ppd_natural_language (trac #5).

2009-03-10  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): The marker-*
	attributes are lists.

2009-01-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.45.

2008-12-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getServerPPD): Fixed version
	check.
	(Connection_getDocument): Likewise.
	* cupsmodule.c (initcups): Likewise.

2008-12-23  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_localizeIPPReason): New method.
	(PPD_localizeMarkerName): Likewise.

2008-12-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Look for
	"testprint" as well as "testprint.ps", as that is the name of the
	test page file in CUPS 1.4 (bug #476612).

2008-12-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Only set a
	document-format attribute if one is specified.

2008-12-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Avoid crash when
	given bad parameters.

2008-11-28  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.44.

2008-11-25  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getFile): Save thread state during
	call.
	(Connection_putFile): Likewise.
	(Connection_getDests): Likewise.
	(Connection_getDefault): Likewise.